--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 80px 20px;
+  padding: 76px 20px;
 }
 
 .header__title {
@@ -79,7 +79,7 @@ a {
 }
 
 .header__text {
-  margin-top: 20px;
+  margin-top: 16px;
   font-size: 1rem;
 }
 
@@ -87,14 +87,15 @@ a {
 -------------------- */
 
 .main {
-  padding: 40px 0;
+  padding: 36px 0;
   background-color: var(--bg-color-section);
 }
 
+.main-container {
+  padding-right: 0;
+}
+
 .qa-section {
-  display: flex;
-  flex-direction: column;
-  row-gap: 36px;
   padding: 40px 0;
   font-size: 1rem;
   border-bottom: 1px solid var(--border-color);
@@ -109,12 +110,23 @@ a {
   font-weight: 600;
 }
 
+.qa-section__answer {
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+  margin-top: 32px;
+}
+
 .qa-section__list {
   padding-left: 24px;
 }
 
 .qa-section__num-list {
   list-style-type: decimal;
+}
+
+.qa-section__list li {
+  padding: 4px 0;
 }
 
 .qa-section__list em {
