--- a/css/style.css
+++ b/css/style.css
@@ -44,20 +44,14 @@ a {
   margin: 0 auto;
 }
 
-@media (width > 768px) {
+@media (width >= 768px) {
   .container {
-    max-width: 768px;
+    max-width: 704px;
+    padding: 0 3%;
   }
 }
 
-@media (width > 1024px) {
-  .container {
-    max-width: 1024px;
-    padding: 0 3.5%;
-  }
-}
-
-@media (width > 1280px) {
+@media (width >= 1280px) {
   .container {
     max-width: 1280px;
   }
@@ -135,4 +129,10 @@ a {
 
 .qa-section__link {
   color: var(--text-color-link);
+}
+
+@media (width >= 1024px) {
+  .qa-section__list {
+    padding-right: 20px;
+  }
 }
